--- a/package.json
+++ b/package.json
@@ -18,10 +18,13 @@
     "@angular/fire": "^6.1.4",
     "@angular/forms": "~11.2.0",
     "@angular/google-maps": "^11.2.6",
+    "@angular/material": "^11.2.6",
     "@angular/platform-browser": "~11.2.0",
     "@angular/platform-browser-dynamic": "~11.2.0",
     "@angular/router": "~11.2.0",
     "firebase": "^8.3.0",
+    "font-awesome": "^4.7.0",
+    "ionicons": "^5.5.1",
     "ngx-qrcode2": "^9.0.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
