--- a/package.json
+++ b/package.json
@@ -22,10 +22,13 @@
     "@angular/platform-browser": "~11.2.0",
     "@angular/platform-browser-dynamic": "~11.2.0",
     "@angular/router": "~11.2.0",
+    "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "firebase": "^8.3.0",
     "font-awesome": "^4.7.0",
     "ionicons": "^5.5.1",
     "ngx-qrcode2": "^9.0.0",
+    "nodemailer": "^6.5.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.3"
