no se ven los iconos

--- a/package.json
+++ b/package.json
@@ -24,11 +24,13 @@
     "@angular/router": "~11.2.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
+    "elastic-email-client": "^1.1.0",
+    "elasticemail": "^0.2.0",
+    "express": "^4.17.1",
     "firebase": "^8.3.0",
     "font-awesome": "^4.7.0",
-    "ionicons": "^5.5.1",
+    "ng-snotify": "^9.0.1",
     "ngx-qrcode2": "^9.0.0",
-    "nodemailer": "^6.5.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.3"
@@ -38,7 +40,7 @@
     "@angular/cli": "~11.2.0",
     "@angular/compiler-cli": "~11.2.0",
     "@types/jasmine": "~3.6.0",
-    "@types/node": "^12.11.1",
+    "@types/node": "^12.20.7",
     "codelyzer": "^6.0.0",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
