--- a/angular.json
+++ b/angular.json
@@ -32,6 +32,8 @@
             ],
             "styles": [
               "src/styles.scss",
+              "node_modules/@fullcalendar/core/main.css",
+              "node_modules/@fullcalendar/daygrid/main.css"
             ],
             "scripts": []
           },
