--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "@angular/platform-browser": "~11.2.0",
     "@angular/platform-browser-dynamic": "~11.2.0",
     "@angular/router": "~11.2.0",
+    "@fullcalendar/angular": "^5.6.0",
+    "@fullcalendar/daygrid": "^5.6.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "elastic-email-client": "^1.1.0",
