--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@angular/router": "~11.2.0",
     "@fullcalendar/angular": "^5.6.0",
     "@fullcalendar/daygrid": "^5.6.0",
+    "angular-google-charts": "^2.0.1",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "elastic-email-client": "^1.1.0",
