--- a/angular.json
+++ b/angular.json
@@ -31,9 +31,8 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.scss",
-              "node_modules/@fullcalendar/core/main.css",
-              "node_modules/@fullcalendar/daygrid/main.css"
+              "src/styles.scss"
+              
             ],
             "scripts": []
           },
