--- a/package.json
+++ b/package.json
@@ -24,6 +24,9 @@
     "@angular/router": "~11.2.0",
     "@fullcalendar/angular": "^5.6.0",
     "@fullcalendar/daygrid": "^5.6.0",
+    "@zxing/browser": "0.0.8",
+    "@zxing/library": "^0.18.4",
+    "@zxing/ngx-scanner": "^3.1.3",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "elastic-email-client": "^1.1.0",
