--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "firebase": "^8.3.0",
     "font-awesome": "^4.7.0",
     "ionicons": "^5.5.1",
+    "ngx-bootstrap": "^6.2.0",
     "ngx-qrcode2": "^9.0.0",
     "nodemailer": "^6.5.0",
     "rxjs": "~6.6.0",
