--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@angular/router": "~11.2.0",
     "@fullcalendar/angular": "^5.6.0",
     "@fullcalendar/daygrid": "^5.6.0",
+    "@fullcalendar/interaction": "^5.6.0",
     "@zxing/browser": "0.0.8",
     "@zxing/library": "^0.18.4",
     "@zxing/ngx-scanner": "^3.1.3",
