--- a/package.json
+++ b/package.json
@@ -22,10 +22,15 @@
     "@angular/platform-browser": "~11.2.0",
     "@angular/platform-browser-dynamic": "~11.2.0",
     "@angular/router": "~11.2.0",
+    "@fullcalendar/angular": "^5.6.0",
+    "@fullcalendar/daygrid": "^5.6.0",
+    "@fullcalendar/interaction": "^5.6.0",
+    "@zxing/ngx-scanner": "^3.1.3",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "firebase": "^8.3.0",
     "font-awesome": "^4.7.0",
+    "google-charts": "^2.0.0",
     "ionicons": "^5.5.1",
     "ngx-bootstrap": "^6.2.0",
     "ngx-qrcode2": "^9.0.0",
