--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "express": "^4.17.1",
     "firebase": "^8.3.0",
     "font-awesome": "^4.7.0",
+    "google-charts": "^2.0.0",
     "ng-snotify": "^9.0.1",
     "ngx-qrcode2": "^9.0.0",
     "rxjs": "~6.6.0",
