--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "firebase": "^8.3.0",
     "font-awesome": "^4.7.0",
     "ng-snotify": "^9.0.1",
+    "ngx-bootstrap": "^6.2.0",
     "ngx-qrcode2": "^9.0.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
